Added SEO and social meta tags

--- a/index.html
+++ b/index.html
@@ -2,10 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
 
+    <title>StudySync - Smart Tools for Students</title>
+    <meta name="title" content="StudySync - Smart Tools for Students" />
+    <meta name="description" content="All-in-one platform with calculators, planners, GPA tools, and more for students. Boost your academic life with ease." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://studysync.vercel.app/" />
+    <meta property="og:title" content="StudySync - Smart Tools for Students" />
+    <meta property="og:description" content="Boost your academic performance with our free tools – GPA calculator, attendance tools, planner & more." />
+    <meta property="og:image" content="https://i.imgur.com/WvqAv8e.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://studysync.vercel.app/" />
+    <meta name="twitter:title" content="StudySync - Smart Tools for Students" />
+    <meta name="twitter:description" content="Boost your academic performance with our free tools – GPA calculator, attendance tools, planner & more." />
+    <meta name="twitter:image" content="https://i.imgur.com/WvqAv8e.png" />
   </head>
   <body>
     <div id="root"></div>
