Added SEO and social meta tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>StudySync - Smart Tools for Students</title>
+    <title>StudySync - Smart Academic Tools</title>
     <meta name="title" content="StudySync - Smart Tools for Students" />
     <meta name="description" content="All-in-one platform with calculators, planners, GPA tools, and more for students. Boost your academic life with ease." />
 
